<resources>
    <string name="app_name">BusTracker</string>
    <string name="title_activity_maps">Map of the city</string>
    <string name="load_map">Load map</string>
    <string name="settings">Settings</string>
    <string name="bustracker">BusTracker</string>
    <string name="keep_track_of_your_public_transportation">Keep track of your public transportation.</string>

    <!-- Location Update Interval values -->
    <string name="location_update_interval">Location update interval</string>
    <string name="location_update_interval_default">5000</string>
    <string name="key_location_update_interval">key_location_update_interval</string>
    <string name="summary_location_update_interval">Set the frequency of location updates</string>
    <string name="title_location_update_interval">Location update interval</string>

    <string-array name="location_update_interval_entries">
        <item>1 second</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
    </string-array>

    <string-array name="location_update_interval_entry_values">
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
        <item>30000</item>
        <item>60000</item>
    </string-array>

    <!-- Location Update Accuracy values -->
    <string name="location_update_accuracy">Location update accuracy</string>
    <string name="location_update_accuracy_default">100</string>
    <string name="key_location_update_accuracy">key_location_update_accuracy</string>
    <string name="summary_location_update_accuracy">Set the accuracy of location updates</string>
    <string name="title_location_update_accuracy">Location update accuracy</string>

    <string-array name="location_update_accuracy_entries">
        <item>Most accurate</item>
        <item>Balanced</item>
        <item>Low power</item>
    </string-array>

    <string-array name="location_update_accuracy_entry_values">
        <item>100</item>
        <item>102</item>
        <item>104</item>
    </string-array>

    <!-- Focus map on current location -->
    <string name="key_focus_map_center_on_current_location">key_focus_map_center_on_current_location</string>
    <string name="title_focus_map_center_on_current_location">Focus map center on current location</string>
    <string name="focus_map_center_default">false</string>

    <!-- Intelligent Bus Track -->
    <string name="key_intelligent_bus_track">key_intelligent_bus_track</string>
    <string name="title_intelligent_bus_track">Let the application manage status</string>
    <string name="intelligent_bus_track_default">true</string>

    <!-- Intelligent Bus Track Debug -->
    <string name="key_intelligent_bus_track_debug">key_intelligent_bus_track_debug</string>
    <string name="title_intelligent_bus_track_debug">Show debug view with closest stations and possible buses</string>
    <string name="intelligent_bus_track_debug_default">false</string>

    <!-- Map themes -->
    <string name="map_theme">Map theme</string>
    <string name="key_map_theme">key_map_theme</string>
    <string name="summary_map_theme">Set the theme of the displayed map</string>
    <string name="title_map_theme">Map theme</string>
    <string name="map_theme_default">map_style_retro</string>
    <string name="check_schedules">Check schedules</string>

    <string-array name="map_theme_entries">
        <item>Standard</item>
        <item>Retro</item>
        <item>Night</item>
        <item>Dark</item>
    </string-array>

    <string-array name="map_theme_entry_values">
        <item>map_style_standard</item>
        <item>map_style_retro</item>
        <item>map_style_night</item>
        <item>map_style_dark</item>
    </string-array>

    <!-- Ask to change location before routing when location is not tracked -->
    <string name="key_ask_location_change">key_ask_location_change</string>
    <string name="title_ask_location_change">Ask for location change before routing</string>
    <string name="summary_ask_location_change">Ask to change current location on the map before getting a route to a selected location when user\'s current location is not being tracked</string>
    <string name="ask_location_change_default">true</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closest_station">Closest station: %s</string>
    <string name="text_bus_number">44</string>
    <string name="custom_location_setup_yes_button_text">Yes</string>
    <string name="custom_location_setup_no_button_text">No</string>
    <string name="custom_location_setup_text_view_text">Do you want to select a new location on the map as your current location?</string>
    <string name="application_logo">Application Logo</string>
    <string name="please_select_your_current_status">Please select your current status:</string>
    <string name="waiting_for_bus">Waiting for bus</string>
    <string name="on_bus">On bus</string>
    <string name="please_select_whether_you_want_your_location_to_be_tracked_or_not">Please select whether you want your location to be tracked or not:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_direction_for_bus_44">Please select direction for bus: 44</string>
    <string name="direction1">Direction1</string>
    <string name="direction2">Direction2</string>
    <string name="tap_on_the_map_to_choose_your_current_location">Tap on the map to choose your current location:</string>
    <string name="text_bus_title">%1$s - %2$s</string>
    <string name="list_containing_the_schedule_for_s_buses">List containing the schedule for %d buses</string>
    <string name="closest_stations_s">Closest stations: %s</string>
    <string name="possible_buses_s">Possible buses: %s</string>
</resources>