<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Location">

        <ListPreference
            android:defaultValue="@string/location_update_interval_default"
            android:dialogTitle="@string/location_update_interval"
            android:entries="@array/location_update_interval_entries"
            android:entryValues="@array/location_update_interval_entry_values"
            android:key="@string/key_location_update_interval"
            android:summary="@string/summary_location_update_interval"
            android:title="@string/title_location_update_interval" />

        <ListPreference
            android:defaultValue="@string/location_update_accuracy_default"
            android:dialogTitle="@string/location_update_accuracy"
            android:entries="@array/location_update_accuracy_entries"
            android:entryValues="@array/location_update_accuracy_entry_values"
            android:key="@string/key_location_update_accuracy"
            android:summary="@string/summary_location_update_accuracy"
            android:title="@string/title_location_update_accuracy" />

        <SwitchPreference
            android:defaultValue="@string/focus_map_center_default"
            android:key="@string/key_focus_map_center_on_current_location"
            android:title="@string/title_focus_map_center_on_current_location" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Interface">

        <ListPreference
            android:defaultValue="@string/map_theme_default"
            android:dialogTitle="@string/map_theme"
            android:entries="@array/map_theme_entries"
            android:entryValues="@array/map_theme_entry_values"
            android:key="@string/key_map_theme"
            android:summary="@string/summary_map_theme"
            android:title="@string/title_map_theme" />

    </PreferenceCategory>
</PreferenceScreen>