<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_orange"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/custom_location_setup_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_location_setup_text_view_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:theme="@style/FontGlobalRegular" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/custom_location_setup_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_style"
            android:text="@string/custom_location_setup_yes_button_text"
            android:textColor="@color/white"
            android:theme="@style/FontGlobalBold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/custom_location_setup_no_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/custom_location_setup_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_style"
            android:text="@string/custom_location_setup_no_button_text"
            android:textColor="@color/white"
            android:theme="@style/FontGlobalBold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/custom_location_setup_yes_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>